--- a/PingPong/src/akinator.css
+++ b/PingPong/src/akinator.css
@@ -69,7 +69,7 @@ body
   justify-content: center;
 }
 
-.buttonExit
+.buttonPause
 {
   display: flex;
   position: fixed;
@@ -91,7 +91,7 @@ body
   font-size: x-large;
   margin-left: .5rem;
 }
-.EXIT
+.Pause
 {
   color: white;
   margin-right: .8rem;
@@ -291,7 +291,7 @@ body
     width: 150px;
     height: 100px;
   }
-  .buttonExit
+  .buttonPause
   {
     display: flex;
     position: fixed;
@@ -380,7 +380,7 @@ body
     right: 0%;
     width: 15%;
   }
-  .buttonExit
+  .buttonPause
   {
     position: fixed;
     top: 65%;
@@ -517,7 +517,7 @@ border-radius: 50%;
     width: 120px;
   }
 
-  .buttonExit
+  .buttonPause
   {
     position: fixed;
     top: 65%;
@@ -676,13 +676,13 @@ border-radius: 50%;
     display: flex;
     font-size: small;
   }
-  .buttonExit
+  .buttonPause
   {
     position: fixed;
     top: 65%;
     right: 60%;
   }
-  .EXIT
+  .Pause
   {
     color: white;
     margin-right: .8rem;
