--- a/PingPong/src/akinator.css
+++ b/PingPong/src/akinator.css
@@ -11,6 +11,7 @@ body
   margin: 0;
   padding: 0;
  background-color: rgb(36, 3, 63);
+ cursor: auto;
 } 
 #canvas1
 {
@@ -69,19 +70,6 @@ body
   justify-content: center;
 }
 
-.buttonPause
-{
-  display: flex;
-  position: fixed;
-  top: 60%;
-  right: 15%;
-  align-items: center;
-  justify-content: center;
-  
-  color:whitesmoke;
-  background-color: red;
-  border-radius: 6px;
-}
 
 .icon
 {
@@ -91,13 +79,7 @@ body
   font-size: x-large;
   margin-left: .5rem;
 }
-.Pause
-{
-  color: white;
-  margin-right: .8rem;
-  font-size: x-large;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-}
+
 
 #start
 {
@@ -154,7 +136,7 @@ body
   background-color: rgb(150, 153, 158);
   justify-content: center;
   top: 8%;
-  left: 24%;
+  left: 25%;
   width: 400px;
   height: 80px;
   border-radius: 10vh;
@@ -211,7 +193,7 @@ body
   position: fixed;
   justify-content: center;
   top: 8%;
-  right: 24%;
+  right: 25%;
   width: 400px;
   height: 80px;
   border-radius: 10vh;
@@ -266,7 +248,7 @@ body
 @media screen and (max-width: 1700px)
 {
   body{
-    background-color: rgb(243, 17, 17);
+    background-color: rgb(36, 3, 63);
   }
   #canvas1
   {
@@ -291,14 +273,6 @@ body
     width: 150px;
     height: 100px;
   }
-  .buttonPause
-  {
-    display: flex;
-    position: fixed;
-    top: 60%;
-    right: 4%;
-  }
-
   #profile1
   {
     display: flex;
@@ -359,7 +333,7 @@ body
 {
   
   body{
-    background-color: burlywood;
+    background-color: rgb(36, 3, 63);
   }
   #canvas1
   {
@@ -380,12 +354,7 @@ body
     right: 0%;
     width: 15%;
   }
-  .buttonPause
-  {
-    position: fixed;
-    top: 65%;
-    right: 5%;
-  }
+  
  
   #profile1
   {
@@ -494,7 +463,7 @@ border-radius: 50%;
   
   body
   {
-    background-color: aqua;
+    background-color: rgb(36, 3, 63);
   }
   #canvas1
   {
@@ -514,14 +483,7 @@ border-radius: 50%;
     display: grid;
     position: fixed;
     right: 0%;
-    width: 120px;
-  }
-
-  .buttonPause
-  {
-    position: fixed;
-    top: 65%;
-    right: 3%;
+    width: 160px;
   }
  
   .vs
@@ -634,12 +596,12 @@ border-radius: 50%;
 
 }
 
-@media screen and (max-width: 740px)
+@media screen and (max-width: 840px)
 {
   
   body
   {
-    background-color: blueviolet;
+    background-color: rgb(36, 3, 63);
   }
   #canvas1
   {
@@ -652,19 +614,56 @@ border-radius: 50%;
     display: flex;
     position: fixed;
     font-size: small;
-    right: 30%; 
+    right: 60%; 
     top: 62%;
   }
-
+  #start
+  {
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    top: 50%;
+    left: 50%; 
+  
+  }
+  .ButtonStart
+  {
+    display: flex;
+    position: fixed;
+    background-color: rgb(0, 140, 255);
+    border-radius: 7px;
+  
+    width: 8vh;
+    height: 3vh;
+  
+    align-items: center;
+    justify-content: space-around;
+  }
+  .startplus
+  {
+    display: flex;
+    position: relative;
+    color: white;
+    font-size: small;
+    margin-left: .8rem;
+  }
+  .Iconpaddles
+{
+  display: flex;
+  position: relative;
+  height: 25px;  
+  width: 25px;
+  margin-bottom: .6rem;
+}
   #box
   {
     display: grid;
     position: fixed;
     font-size: small;
-    right:15%;
+    right:50%;
     top: 64%;
-    width: 100px;
-    height: 50px;
+    width: 120px;
+    height: 80px;
   }
   .sound
   {
@@ -676,19 +675,7 @@ border-radius: 50%;
     display: flex;
     font-size: small;
   }
-  .buttonPause
-  {
-    position: fixed;
-    top: 65%;
-    right: 60%;
-  }
-  .Pause
-  {
-    color: white;
-    margin-right: .8rem;
-    font-size: medium;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-  }
+
   .icon
   {
     display: flex;
